--- a/CloudProjectAutomation/test-output/emailable-report.html
+++ b/CloudProjectAutomation/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">54,881</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47,686</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.TCs.TC003</td><td><a href="#m0">verifyButtons</a></td><td rowspan="1">1651496965575</td><td rowspan="1">2049</td></tr><tr class="passedeven"><td><a href="#m1">verifyLinks</a></td><td rowspan="1">1651496959998</td><td rowspan="1">4463</td></tr><tr class="passedeven"><td><a href="#m2">verifyRadioBtns</a></td><td rowspan="1">1651496937014</td><td rowspan="1">21595</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.TCs.TC003</td><td><a href="#m0">verifyButtons</a></td><td rowspan="1">1651754933169</td><td rowspan="1">1973</td></tr><tr class="passedeven"><td><a href="#m1">verifyLinks</a></td><td rowspan="1">1651754928511</td><td rowspan="1">3595</td></tr><tr class="passedeven"><td><a href="#m2">verifyRadioBtns</a></td><td rowspan="1">1651754915983</td><td rowspan="1">11536</td></tr><tr class="passedeven"><td><a href="#m3">verifytable</a></td><td rowspan="1">1651754935843</td><td rowspan="1">8783</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.TCs.TC003#verifyButtons</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.TCs.TC003#verifyLinks</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.TCs.TC003#verifyRadioBtns</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.TCs.TC003#verifytable</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
