--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\1\testng-eclipse--558854481\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\4\testng-eclipse--1185822474\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -115,6 +115,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyRadioBtns">verifyRadioBtns</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifytable">verifytable</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -156,12 +161,19 @@
                   <span class="method-name">verifyRadioBtns</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifytable">
+                  </a> <!-- verifytable -->
+                  <span class="method-name">verifytable</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\1\testng-eclipse--558854481\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\4\testng-eclipse--1185822474\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,24 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyRadioBtns')
 data.setCell(0, 2, 'com.TCs.TC003')
-data.setCell(0, 3, 21595);
+data.setCell(0, 3, 11536);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLinks')
+data.setCell(1, 1, 'verifytable')
 data.setCell(1, 2, 'com.TCs.TC003')
-data.setCell(1, 3, 4463);
+data.setCell(1, 3, 8783);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyButtons')
+data.setCell(2, 1, 'verifyLinks')
 data.setCell(2, 2, 'com.TCs.TC003')
-data.setCell(2, 3, 2049);
+data.setCell(2, 3, 3595);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyButtons')
+data.setCell(3, 2, 'com.TCs.TC003')
+data.setCell(3, 3, 1973);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -260,31 +276,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyRadioBtns</span>
-                <span class="method-start">20981 ms</span>
+                <span class="method-start">16637 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">42582 ms</span>
+                <span class="method-start">28178 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">verifyLinks</span>
-                <span class="method-start">43965 ms</span>
+                <span class="method-start">29165 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">48431 ms</span>
+                <span class="method-start">32763 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">verifyButtons</span>
-                <span class="method-start">49542 ms</span>
+                <span class="method-start">33823 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">51593 ms</span>
+                <span class="method-start">35798 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">verifytable</span>
+                <span class="method-start">36497 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">reload</span>
+                <span class="method-start">45285 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">53159 ms</span>
+                <span class="method-start">45953 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
