--- a/CloudProjectAutomation/test-output/old/Default suite/classes.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>AddDataInTable</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyButtons</td>
 <td>&nbsp;</td></tr>
 <tr>
