--- a/CloudProjectAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:18:19</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC003.reachElementsMenu()[pri:0, instance:com.TCs.TC003@5d534f5d]">&gt;&gt;reachElementsMenu</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:19:04</td>   <td>45273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@5d534f5d]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:19:04</td>   <td>45273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@5d534f5d]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:19:04</td>   <td>45273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@5d534f5d]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:19:04</td>   <td>45273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@5d534f5d]">&lt;&lt;reload</td> 
-<td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:19:05</td>   <td>45941</td> <td>&nbsp;</td><td title="&lt;&lt;TC003.tearDown()[pri:0, instance:com.TCs.TC003@5d534f5d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:18:53</td>   <td>33811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyButtons()[pri:3, instance:com.TCs.TC003@5d534f5d]">verifyButtons</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:18:48</td>   <td>29153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyLinks()[pri:2, instance:com.TCs.TC003@5d534f5d]">verifyLinks</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:18:35</td>   <td>16624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyRadioBtns()[pri:1, instance:com.TCs.TC003@5d534f5d]">verifyRadioBtns</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="f376b9">  <td>22/05/05 18:18:55</td>   <td>36485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifytable()[pri:4, instance:com.TCs.TC003@5d534f5d]">verifytable</td> 
-  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.AddDataInTable(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:5, instance:com.TCs.TC003@791f145a]">AddDataInTable</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.AddDataInTable(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:5, instance:com.TCs.TC003@791f145a]">AddDataInTable</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:00:52</td>   <td>-40583</td> <td>&nbsp;</td><td title="&gt;&gt;TC003.reachElementsMenu()[pri:0, instance:com.TCs.TC003@791f145a]">&gt;&gt;reachElementsMenu</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC003.reload()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;reload</td> 
+<td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:36</td>   <td>3807</td> <td>&nbsp;</td><td title="&lt;&lt;TC003.tearDown()[pri:0, instance:com.TCs.TC003@791f145a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:17</td>   <td>-15879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyButtons()[pri:3, instance:com.TCs.TC003@791f145a]">verifyButtons</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:15</td>   <td>-17652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyLinks()[pri:2, instance:com.TCs.TC003@791f145a]">verifyLinks</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:09</td>   <td>-23281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifyRadioBtns()[pri:1, instance:com.TCs.TC003@791f145a]">verifyRadioBtns</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>22/05/06 19:01:19</td>   <td>-13198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.verifytable()[pri:4, instance:com.TCs.TC003@791f145a]">verifytable</td> 
+  <td>main@91912419</td>   <td></td> </tr>
 </table>
