--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse--131372918\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse-2124444345\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyLinks">verifyLinks</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -118,17 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyButtons">verifyButtons</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyLinks">verifyLinks</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -153,90 +144,12 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.TCs.TC003</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLinks">
-                  </a> <!-- verifyLinks -->
-                  <span class="method-name">verifyLinks</span>
-                  <div class="stack-trace">org.openqa.selenium.StaleElementReferenceException: stale element reference: element is not attached to the page document
-  (Session info: chrome=98.0.4758.102)
-For documentation on this error, please visit: https://selenium.dev/exceptions/#stale_element_reference
-Build info: version: &apos;4.1.2&apos;, revision: &apos;9a5a329c5a&apos;
-System info: host: &apos;LTIN318920&apos;, ip: &apos;192.168.0.105&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [2d571060e6b4111e5ce83305e7ada053, clickElement {id=d1aaa941-7e60-41b3-946f-f206a7a7d5a3}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 98.0.4758.102, chrome: {chromedriverVersion: 98.0.4758.102 (273bf7ac8c90..., userDataDir: C:\Users\2126765\AppData\Lo...}, goog:chromeOptions: {debuggerAddress: localhost:54293}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:54293/devtoo..., se:cdpVersion: 98.0.4758.102, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on WINDOWS (2d571060e6b4111e5ce83305e7ada053)] -&gt; xpath: //*[@id=&apos;app&apos;]/div/div/div[2]/div[1]/div/div/div[1]]
-Session ID: 2d571060e6b4111e5ce83305e7ada053
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:558)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:251)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at com.TCs.TC003.verifyLinks(TC003.java:110)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:135)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:673)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:220)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:945)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:193)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:808)
-	at org.testng.TestRunner.run(TestRunner.java:603)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:429)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:423)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:383)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:326)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1249)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1169)
-	at org.testng.TestNG.runSuites(TestNG.java:1092)
-	at org.testng.TestNG.run(TestNG.java:1060)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.TCs.TC003</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">
-                  </a> <!-- AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA) -->
-                  <span class="method-name">AddDataInTable</span>
-                  <span class="parameters">(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">
@@ -247,9 +160,24 @@ Session ID: 2d571060e6b4111e5ce83305e7ada053
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">
+                  </a> <!-- AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA) -->
+                  <span class="method-name">AddDataInTable</span>
+                  <span class="parameters">(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="verifyButtons">
                   </a> <!-- verifyButtons -->
                   <span class="method-name">verifyButtons</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLinks">
+                  </a> <!-- verifyLinks -->
+                  <span class="method-name">verifyLinks</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -271,7 +199,7 @@ Session ID: 2d571060e6b4111e5ce83305e7ada053
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse--131372918\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse-2124444345\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -324,32 +252,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifytable')
 data.setCell(0, 2, 'com.TCs.TC003')
-data.setCell(0, 3, 7411);
+data.setCell(0, 3, 7403);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyRadioBtns')
 data.setCell(1, 2, 'com.TCs.TC003')
-data.setCell(1, 3, 5606);
+data.setCell(1, 3, 5582);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AddDataInTable')
+data.setCell(2, 1, 'verifyLinks')
 data.setCell(2, 2, 'com.TCs.TC003')
-data.setCell(2, 3, 3085);
+data.setCell(2, 3, 4372);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'AddDataInTable')
 data.setCell(3, 2, 'com.TCs.TC003')
-data.setCell(3, 3, 3019);
+data.setCell(3, 3, 3145);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyButtons')
+data.setCell(4, 1, 'AddDataInTable')
 data.setCell(4, 2, 'com.TCs.TC003')
-data.setCell(4, 3, 2038);
+data.setCell(4, 3, 2910);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyLinks')
+data.setCell(5, 1, 'verifyButtons')
 data.setCell(5, 2, 'com.TCs.TC003')
-data.setCell(5, 3, 1081);
+data.setCell(5, 3, 1969);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 25 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -382,57 +310,51 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyRadioBtns</span>
-                <span class="method-start">17309 ms</span>
+                <span class="method-start">17610 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">22921 ms</span>
+                <span class="method-start">23198 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">verifyLinks</span>
-                <span class="method-start">22938 ms</span>
+                <span class="method-start">23226 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">24025 ms</span>
+                <span class="method-start">27601 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">verifyButtons</span>
-                <span class="method-start">24711 ms</span>
+                <span class="method-start">28490 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">26750 ms</span>
+                <span class="method-start">30461 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">verifytable</span>
-                <span class="method-start">27392 ms</span>
+                <span class="method-start">31227 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">34805 ms</span>
+                <span class="method-start">38632 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
-                <span class="method-start">36542 ms</span>
+                <span class="method-start">40514 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">reload</span>
-                <span class="method-start">39629 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
-                <span class="method-start">40590 ms</span>
+                <span class="method-start">43662 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">43611 ms</span>
+                <span class="method-start">46574 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">44397 ms</span>
+                <span class="method-start">47318 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
