--- a/CloudProjectAutomation/test-output/index.html
+++ b/CloudProjectAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse-2124444345\testng-customsuite.xml</span>
+                    <span>C:\Users\2126765\AppData\Local\Temp\10\testng-eclipse-145300313\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyButtons">verifyButtons</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyLinks">verifyLinks</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="verifyRadioBtns">verifyRadioBtns</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TCs.TC003" class="method navigator-link" hash-for-method="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -152,14 +137,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">
-                  </a> <!-- AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA) -->
-                  <span class="method-name">AddDataInTable</span>
-                  <span class="parameters">(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)">
                   </a> <!-- AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA) -->
                   <span class="method-name">AddDataInTable</span>
@@ -168,23 +145,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyButtons">
-                  </a> <!-- verifyButtons -->
-                  <span class="method-name">verifyButtons</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLinks">
-                  </a> <!-- verifyLinks -->
-                  <span class="method-name">verifyLinks</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyRadioBtns">
-                  </a> <!-- verifyRadioBtns -->
-                  <span class="method-name">verifyRadioBtns</span>
+                  <a name="AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)">
+                  </a> <!-- AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA) -->
+                  <span class="method-name">AddDataInTable</span>
+                  <span class="parameters">(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -199,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\5\testng-eclipse-2124444345\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\2126765\AppData\Local\Temp\10\testng-eclipse-145300313\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -248,36 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifytable')
 data.setCell(0, 2, 'com.TCs.TC003')
 data.setCell(0, 3, 7403);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyRadioBtns')
+data.setCell(1, 1, 'AddDataInTable')
 data.setCell(1, 2, 'com.TCs.TC003')
-data.setCell(1, 3, 5582);
+data.setCell(1, 3, 2609);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLinks')
+data.setCell(2, 1, 'AddDataInTable')
 data.setCell(2, 2, 'com.TCs.TC003')
-data.setCell(2, 3, 4372);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'AddDataInTable')
-data.setCell(3, 2, 'com.TCs.TC003')
-data.setCell(3, 3, 3145);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'AddDataInTable')
-data.setCell(4, 2, 'com.TCs.TC003')
-data.setCell(4, 3, 2910);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyButtons')
-data.setCell(5, 2, 'com.TCs.TC003')
-data.setCell(5, 3, 1969);
+data.setCell(2, 3, 2568);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 25 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -292,9 +244,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.TCs.TC003</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyButtons</span>
+                <br/>
+                <span class="ignored-method-name">verifyRadioBtns</span>
+                <br/>
+                <span class="ignored-method-name">verifyLinks</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -309,52 +272,28 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verifyRadioBtns</span>
-                <span class="method-start">17610 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">reload</span>
-                <span class="method-start">23198 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">verifyLinks</span>
-                <span class="method-start">23226 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">reload</span>
-                <span class="method-start">27601 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">verifyButtons</span>
-                <span class="method-start">28490 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">reload</span>
-                <span class="method-start">30461 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
                 <span class="method-name">verifytable</span>
-                <span class="method-start">31227 ms</span>
+                <span class="method-start">16028 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">38632 ms</span>
+                <span class="method-start">23434 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">AddDataInTable(Sundar, V, 29, sundar@abc.co, 30000, QA)</span>
-                <span class="method-start">40514 ms</span>
+                <span class="method-start">24774 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">AddDataInTable(Ajithra, G, 29, aju@abc.co, 35000, QA)</span>
-                <span class="method-start">43662 ms</span>
+                <span class="method-start">27385 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">reload</span>
-                <span class="method-start">46574 ms</span>
+                <span class="method-start">29954 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">47318 ms</span>
+                <span class="method-start">30523 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
