--- a/CloudProjectAutomation/test-output/old/Default suite/methods-not-run.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.TCs.TC003.verifyButtons</td></tr>
+<tr><td>com.TCs.TC003.verifyRadioBtns</td></tr>
+<tr><td>com.TCs.TC003.verifyLinks</td></tr>
 </table>
