--- a/CloudProjectAutomation/test-output/old/Default suite/classes.html
+++ b/CloudProjectAutomation/test-output/old/Default suite/classes.html
@@ -14,6 +14,14 @@
 <td>verifyBrowserWindows</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>verifyAlerts</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyFrames</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
